[Misc] Add some assertions to some tests (ideally, they'd need to be improved since they're not testing much)